<?xml version="1.0"?>
<package>
  <name>rosjava_messages</name>
  <version>0.1.282</version>
  <description>
    Message generation for rosjava.
  </description>
  <url type="website">http://ros.org/wiki/rosjava_messages</url>
  <url type="repository">https://github.com/rosjava/rosjava_messages</url>
  <url type="bugtracker">https://github.com/rosjava/rosjava_messages/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="damonkohler@google.com">Damon Kohler</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>map_store</build_depend> <!-- waiting for https://github.com/ros-planning/map_store/pull/6 and needed for android apps -->
  <build_depend>rocon_service_pair_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cob_lookat_action</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>cob_object_detection_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>microstrain_3dmgx2_imu</build_depend>
  <build_depend>novatel_msgs</build_depend>
  <build_depend>moveit_simple_grasps</build_depend>
  <build_depend>visp_camera_calibration</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>manipulation_msgs</build_depend>
  <build_depend>rospy_message_converter</build_depend>
  <build_depend>underwater_sensor_msgs</build_depend>
  <build_depend>data_vis_msgs</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>bond</build_depend>
  <build_depend>cob_light</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>interaction_cursor_msgs</build_depend>
  <build_depend>grasp_stability_msgs</build_depend>
  <build_depend>razer_hydra</build_depend>
  <build_depend>cob_sound</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>cob_footprint_observer</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>frontier_exploration</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>zeroconf_msgs</build_depend>
  <build_depend>apriltags_ros</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>cob_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>bride_tutorials</build_depend>
  <build_depend>rosserial_msgs</build_depend>
  <build_depend>wfov_camera_msgs</build_depend>
  <build_depend>hector_uav_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>axis_camera</build_depend>
  <build_depend>cob_perception_msgs</build_depend>
  <build_depend>cob_kinematics</build_depend>
  <build_depend>ur_msgs</build_depend>
  <build_depend>smach_msgs</build_depend>
  <build_depend>image_cb_detector</build_depend>
  <build_depend>carl_navigation</build_depend>
  <build_depend>nav2d_operator</build_depend>
  <build_depend>p2os_teleop</build_depend>
  <build_depend>gateway_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>calibration_msgs</build_depend>
  <build_depend>rmp_msgs</build_depend>
  <build_depend>blob</build_depend>
  <build_depend>concert_msgs</build_depend>
  <build_depend>jsk_gui_msgs</build_depend>
  <build_depend>hector_mapping</build_depend>
  <build_depend>mongodb_store_msgs</build_depend>
  <build_depend>p2os_msgs</build_depend>
  <build_depend>cob_grasp_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>graph_msgs</build_depend>
  <build_depend>ml_classifiers</build_depend>
  <build_depend>m4atx_battery_monitor</build_depend>
  <build_depend>jsk_hark_msgs</build_depend>
  <build_depend>gps_common</build_depend>
  <build_depend>um6</build_depend>
  <build_depend>iai_content_msgs</build_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>cob_base_drive_chain</build_depend>
  <build_depend>designator_integration_msgs</build_depend>
  <build_depend>scheduler_msgs</build_depend>
  <build_depend>velodyne_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>shared_serial</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>image_view2</build_depend>
  <build_depend>jackal_msgs</build_depend>
  <build_depend>create_node</build_depend>
  <build_depend>graft</build_depend>
  <build_depend>rocon_tutorial_msgs</build_depend>
  <build_depend>ntpd_driver</build_depend>
  <build_depend>rospy_tutorials</build_depend>
  <build_depend>ecto_ros</build_depend>
  <build_depend>qt_tutorials</build_depend>
  <build_depend>cob_srvs</build_depend>
  <build_depend>scanning_table_msgs</build_depend>
  <build_depend>cob_phidgets</build_depend>
  <build_depend>rosserial_windows</build_depend>
  <build_depend>nav2d_navigator</build_depend>
  <build_depend>arbotix_msgs</build_depend>
  <build_depend>humanoid_nav_msgs</build_depend>
  <build_depend>turtlebot_msgs</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>polled_camera</build_depend>
  <build_depend>roscpp_tutorials</build_depend>
  <build_depend>visp_hand2eye_calibration</build_depend>
  <build_depend>topic_proxy</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>ros_topology_msgs</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>multimaster_msgs_fkie</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>nav2d_msgs</build_depend>
  <build_depend>sr_edc_ethercat_drivers</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mln_robosherlock_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rail_pick_and_place_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>smart_battery_msgs</build_depend>
  <build_depend>cob_script_server</build_depend>
  <build_depend>bayesian_belief_networks</build_depend>
  <build_depend>yocs_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>jsk_network_tools</build_depend>
  <build_depend>rocon_device_msgs</build_depend>
  <build_depend>ros_statistics_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>wpi_jaco_msgs</build_depend>
  <build_depend>visp_tracker</build_depend>
  <build_depend>interactive_marker_proxy</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>uuid_msgs</build_depend>
  <build_depend>sr_ronex_msgs</build_depend>
  <build_depend>theora_image_transport</build_depend>
  <build_depend>cob_pick_place_action</build_depend>
  <build_depend>iai_kinematics_msgs</build_depend>
  <build_depend>world_canvas_msgs</build_depend>
  <build_depend>hector_nav_msgs</build_depend>
  <build_depend>romeo_dcm_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>keyboard</build_depend>
  <build_depend>actionlib_tutorials</build_depend>
  <build_depend>turtle_actionlib</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>rail_segmentation</build_depend>
  <build_depend>view_controller_msgs</build_depend>
  <build_depend>camera1394</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosapi</build_depend>
  <build_depend>rocon_app_manager_msgs</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>posedetection_msgs</build_depend>
  <build_depend>statistics_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>dna_extraction_msgs</build_depend>
  <build_depend>rosbridge_library</build_depend>
  <build_depend>twist_mux_msgs</build_depend>
  <build_depend>p2os_urdf</build_depend>
  <build_depend>household_objects_database_msgs</build_depend>
  <build_depend>capabilities</build_depend>
  <build_depend>jsk_footstep_msgs</build_depend>
  <build_depend>hector_worldmodel_msgs</build_depend>
  <build_depend>rosauth</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>concert_service_msgs</build_depend>
  <build_depend>lighting_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>naoqi_msgs</build_depend>
  <build_depend>cob_camera_sensors</build_depend>
  <build_depend>speech_recognition_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>nao_interaction_msgs</build_depend>
  <build_depend>schunk_sdh</build_depend>
  <build_depend>rocon_std_msgs</build_depend>
  <build_depend>kobuki_testsuite</build_depend>
  <build_depend>iai_robosherlock_actions</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>dynamic_tf_publisher</build_depend>
  <build_depend>multisense_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rqt_graphprofiler</build_depend>
  <build_depend>image_exposure_msgs</build_depend>
  <build_depend>sherlock_sim_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>rospilot</build_depend>
  <build_depend>rocon_interaction_msgs</build_depend>
  <build_depend>audio_common_msgs</build_depend>
  <build_depend>neo_msgs</build_depend>
  <build_depend>carl_moveit</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>saphari_msgs</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>grasping_msgs</build_depend>
  <build_depend>roseus</build_depend>


  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
</package>