<?xml version="1.0"?>
<package>
  <name>rosjava_messages</name>
  <version>0.1.327</version>
  <description>
    Message generation for rosjava.
  </description>
  <url type="website">http://ros.org/wiki/rosjava_messages</url>
  <url type="repository">https://github.com/rosjava/rosjava_messages</url>
  <url type="bugtracker">https://github.com/rosjava/rosjava_messages/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>
  <author>Damon Kohler</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>map_store</build_depend> <!-- waiting for https://github.com/ros-planning/map_store/pull/6 and needed for android apps -->
  <build_depend>r2_msgs</build_depend>
  <build_depend>smart_battery_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>cob_lookat_action</build_depend>
  <build_depend>rosruby_tutorials</build_depend>
  <build_depend>rocon_service_pair_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>grasp_stability_msgs</build_depend>
  <build_depend>jsk_rviz_plugins</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>cob_object_detection_msgs</build_depend>
  <build_depend>rosruby</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>baxter_maintenance_msgs</build_depend>
  <build_depend>epos_driver</build_depend>
  <build_depend>microstrain_3dmgx2_imu</build_depend>
  <build_depend>novatel_msgs</build_depend>
  <build_depend>moveit_simple_grasps</build_depend>
  <build_depend>visp_camera_calibration</build_depend>
  <build_depend>fs100_motoman</build_depend>
  <build_depend>cob_relayboard</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>pr2_gripper_sensor_action</build_depend>
  <build_depend>rospy_message_converter</build_depend>
  <build_depend>underwater_sensor_msgs</build_depend>
  <build_depend>jsk_footstep_controller</build_depend>
  <build_depend>segbot_gui</build_depend>
  <build_depend>cob_trajectory_controller</build_depend>
  <build_depend>grizzly_msgs</build_depend>
  <build_depend>data_vis_msgs</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>hrpsys_gazebo_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>keyboard</build_depend>
  <build_depend>pr2_calibration_launch</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>bond</build_depend>
  <build_depend>saphari_msgs</build_depend>
  <build_depend>cob_light</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>interaction_cursor_msgs</build_depend>
  <build_depend>razer_hydra</build_depend>
  <build_depend>cob_sound</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>rosbridge_library</build_depend>
  <build_depend>cob_footprint_observer</build_depend>
  <build_depend>ethzasl_icp_mapper</build_depend>
  <build_depend>pr2_mechanism_controllers</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>app_manager</build_depend>
  <build_depend>cmvision</build_depend>
  <build_depend>bwi_planning</build_depend>
  <build_depend>frontier_exploration</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>zeroconf_msgs</build_depend>
  <build_depend>apriltags_ros</build_depend>
  <build_depend>fingertip_pressure</build_depend>
  <build_depend>rospeex_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>cob_base_drive_chain</build_depend>
  <build_depend>applanix_msgs</build_depend>
  <build_depend>rosserial_msgs</build_depend>
  <build_depend>hector_mapping</build_depend>
  <build_depend>asmach_tutorials</build_depend>
  <build_depend>household_objects_database_msgs</build_depend>
  <build_depend>segbot_simulation_apps</build_depend>
  <build_depend>mongodb_store_msgs</build_depend>
  <build_depend>lizi</build_depend>
  <build_depend>kingfisher_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>axis_camera</build_depend>
  <build_depend>cob_perception_msgs</build_depend>
  <build_depend>cob_kinematics</build_depend>
  <build_depend>qt_tutorials</build_depend>
  <build_depend>pr2_power_board</build_depend>
  <build_depend>segbot_sensors</build_depend>
  <build_depend>ur_msgs</build_depend>
  <build_depend>smach_msgs</build_depend>
  <build_depend>image_cb_detector</build_depend>
  <build_depend>p2os_teleop</build_depend>
  <build_depend>read_omni_dataset</build_depend>
  <build_depend>gateway_msgs</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>calibration_msgs</build_depend>
  <build_depend>rmp_msgs</build_depend>
  <build_depend>rosauth</build_depend>
  <build_depend>pr2_gazebo_plugins</build_depend>
  <build_depend>visp_hand2eye_calibration</build_depend>
  <build_depend>concert_msgs</build_depend>
  <build_depend>jsk_gui_msgs</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>pano_ros</build_depend>
  <build_depend>naoqi_msgs</build_depend>
  <build_depend>graph_msgs</build_depend>
  <build_depend>ml_classifiers</build_depend>
  <build_depend>ethercat_hardware</build_depend>
  <build_depend>cob_grasp_generation</build_depend>
  <build_depend>jsk_hark_msgs</build_depend>
  <build_depend>gps_common</build_depend>
  <build_depend>jaco_msgs</build_depend>
  <build_depend>wireless_msgs</build_depend>
  <build_depend>turtlebot_calibration</build_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>bride_tutorials</build_depend>
  <build_depend>designator_integration_msgs</build_depend>
  <build_depend>jsk_pr2_startup</build_depend>
  <build_depend>scheduler_msgs</build_depend>
  <build_depend>velodyne_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>shared_serial</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>p2os_driver</build_depend>
  <build_depend>image_view2</build_depend>
  <build_depend>pr2_tilt_laser_interface</build_depend>
  <build_depend>rocon_std_msgs</build_depend>
  <build_depend>create_node</build_depend>
  <build_depend>graft</build_depend>
  <build_depend>ptu_control</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pr2_common_action_msgs</build_depend>
  <build_depend>rospy_tutorials</build_depend>
  <build_depend>ecto_ros</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>clearpath_base</build_depend>
  <build_depend>map_merger</build_depend>
  <build_depend>eusgazebo</build_depend>
  <build_depend>manipulation_msgs</build_depend>
  <build_depend>cob_srvs</build_depend>
  <build_depend>scanning_table_msgs</build_depend>
  <build_depend>cob_phidgets</build_depend>
  <build_depend>rosserial_windows</build_depend>
  <build_depend>nav2d_navigator</build_depend>
  <build_depend>arbotix_msgs</build_depend>
  <build_depend>humanoid_nav_msgs</build_depend>
  <build_depend>wifi_ddwrt</build_depend>
  <build_depend>turtlebot_msgs</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>polled_camera</build_depend>
  <build_depend>roscpp_tutorials</build_depend>
  <build_depend>pr2_self_test_msgs</build_depend>
  <build_depend>face_detector</build_depend>
  <build_depend>topic_proxy</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>rosapi</build_depend>
  <build_depend>bwi_planning_common</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>jsk_pcl_ros</build_depend>
  <build_depend>iai_control_msgs</build_depend>
  <build_depend>um6</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>hector_uav_msgs</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>multimaster_msgs_fkie</build_depend>
  <build_depend>nav2d_msgs</build_depend>
  <build_depend>sr_edc_ethercat_drivers</build_depend>
  <build_depend>blob</build_depend>
  <build_depend>universal_teleop</build_depend>
  <build_depend>explorer</build_depend>
  <build_depend>play_motion_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mln_robosherlock_msgs</build_depend>
  <build_depend>linux_hardware</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>kobuki_testsuite</build_depend>
  <build_depend>cob_script_server</build_depend>
  <build_depend>bayesian_belief_networks</build_depend>
  <build_depend>yocs_msgs</build_depend>
  <build_depend>rtmbuild</build_depend>
  <build_depend>jsk_network_tools</build_depend>
  <build_depend>stereo_wall_detection</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>visp_tracker</build_depend>
  <build_depend>interactive_marker_proxy</build_depend>
  <build_depend>iai_content_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>pddl_msgs</build_depend>
  <build_depend>network_monitor_udp</build_depend>
  <build_depend>ethercat_trigger_controllers</build_depend>
  <build_depend>uuid_msgs</build_depend>
  <build_depend>sr_ronex_msgs</build_depend>
  <build_depend>theora_image_transport</build_depend>
  <build_depend>cob_pick_place_action</build_depend>
  <build_depend>iai_kinematics_msgs</build_depend>
  <build_depend>pr2_precise_trajectory</build_depend>
  <build_depend>segway_rmp</build_depend>
  <build_depend>hector_nav_msgs</build_depend>
  <build_depend>romeo_dcm_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>rovio_shared</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>turtlebot_actions</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>jsk_perception</build_depend>
  <build_depend>wge100_camera</build_depend>
  <build_depend>iai_urdf_msgs</build_depend>
  <build_depend>adhoc_communication</build_depend>
  <build_depend>actionlib_tutorials</build_depend>
  <build_depend>turtle_actionlib</build_depend>
  <build_depend>person_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>view_controller_msgs</build_depend>
  <build_depend>sherlock_sim_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_tf_publisher</build_depend>
  <build_depend>rocon_app_manager_msgs</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>roboteq_msgs</build_depend>
  <build_depend>posedetection_msgs</build_depend>
  <build_depend>statistics_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>dna_extraction_msgs</build_depend>
  <build_depend>twist_mux_msgs</build_depend>
  <build_depend>p2os_urdf</build_depend>
  <build_depend>wfov_camera_msgs</build_depend>
  <build_depend>capabilities</build_depend>
  <build_depend>jsk_footstep_msgs</build_depend>
  <build_depend>hector_worldmodel_msgs</build_depend>
  <build_depend>program_queue</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>cob_camera_sensors</build_depend>
  <build_depend>speech_recognition_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>nao_interaction_msgs</build_depend>
  <build_depend>schunk_sdh</build_depend>
  <build_depend>leap_motion</build_depend>
  <build_depend>iai_robosherlock_actions</build_depend>
  <build_depend>ndt_map</build_depend>
  <build_depend>handle_detector</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>simple_robot_control</build_depend>
  <build_depend>multisense_ros</build_depend>
  <build_depend>nav2d_operator</build_depend>
  <build_depend>s3000_laser</build_depend>
  <build_depend>rtt_ros_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>image_exposure_msgs</build_depend>
  <build_depend>rosruby_messages</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>resized_image_transport</build_depend>
  <build_depend>pr2_gripper_sensor_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>rocon_interaction_msgs</build_depend>
  <build_depend>audio_common_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>grasping_msgs</build_depend>
  <build_depend>roseus</build_depend>


  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
</package>
