<?xml version="1.0"?>
<package>
  <name>rosjava_messages</name>
  <version>0.3.0</version>
  <description>
    Message generation for rosjava.
  </description>
  <url type="website">http://ros.org/wiki/rosjava_messages</url>
  <url type="repository">https://github.com/rosjava/rosjava_messages</url>
  <url type="bugtracker">https://github.com/rosjava/rosjava_messages/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>
  <author>Damon Kohler</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>genjava</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>            # ros/ros_comm_msgs
  <build_depend>std_srvs</build_depend>
  <build_depend>rosjava_test_msgs</build_depend>        # rosjava/rosjava_test_msgs
  <build_depend>actionlib_msgs</build_depend>           # ros/common_msgs
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>                 # geometry_experimental/tf2_msgs
  <build_depend>ar_track_alvar_msgs</build_depend>      # sniekum/ar_track_alvar_msgs
  <build_depend>uuid_msgs</build_depend>                # ros-geographic-info/unique_identifier
  <build_depend>yocs_msgs</build_depend>                # yujinrobot/yocs_msgs
  <build_depend>concert_msgs</build_depend>             # robotics-in-concert/rocon_msgs
  <build_depend>concert_service_msgs</build_depend>
  <build_depend>gateway_msgs</build_depend>
  <build_depend>rocon_app_manager_msgs</build_depend>
  <build_depend>rocon_device_msgs</build_depend>
  <build_depend>rocon_interaction_msgs</build_depend>
  <build_depend>rocon_service_pair_msgs</build_depend>
  <build_depend>rocon_std_msgs</build_depend>
  <build_depend>rocon_tutorial_msgs</build_depend>
  <build_depend>scheduler_msgs</build_depend>
  <build_depend>world_canvas_msgs</build_depend>
  <!-- Disabled until it is released for kinetic
  <build_depend>map_store</build_depend>                # ros-planning/map_store
  -->
  <build_depend>move_base_msgs</build_depend>           # ros-planning/navigation

  <!-- Temporary requirement so move_base_msgs compiles - remove once
       https://github.com/ros-planning/navigation/pull/312 is fixed and released.
  -->
  <build_depend>roscpp</build_depend>           # ros-planning/navigation

  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>genjava</run_depend>
</package>
